--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <!-- === PROFILE === -->
     <div class="profile">
-      <img src="Image for web/pfp.jpg" alt="" width="150px">
+      <img src="Image_for_web/images/pfp.jpg" alt="" width="150px">
       <h1>R.Humphreys</h1>
       <div class = "social-icons">
         <a href="#"><i class="fa-brands fa-instagram"></i></a>  
