--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
             <a href="#"><i class="fa-solid fa-user"></i> About Me</a>
           </li>
           <li>
+            <a href="#"><i class="fa-solid fa-book"></i> Skills</a>
+          </li>
+          <li>
             <a href="#"><i class="fa-solid fa-briefcase"></i> Portfolio</a>
           </li>
           <li>
@@ -70,7 +73,7 @@
       <section id="about">
         <h1 class="sub-heading">About</h1>
         <div class="divider"></div>
-        <p>
+        <p class="sub-para">
           I am a dedicated Computer Science student at Aberystwyth University,
           passionate about coding and technology. Alongside my studies, I play
           for the university's first team volleyball, enjoying the challenge and
@@ -83,7 +86,7 @@
         <div class="about-col">
           <!-- img-col -->
           <div class="img-col">
-            <img src="Image_for_web/images/IMG_5225.jpg" alt="" />
+            <img src="Image_for_web/images/NewPic.jpg" alt="" />
           </div>
 
           <!-- information -->
@@ -135,7 +138,27 @@
         </div>
       </section>
       <!-- === ABOUT SECTION END ===-->
+
+      <!-- === SKILLS SECTION START === -->
+       <section id="skills">
+        <h1 class="sub-heading">Skills</h1>
+        <div class="divider"></div>
+        <p class="sub-para">
+          Below are some of my skills, and L'm always looking to learn more.
+        </p>
+        <div class="skills-row">
+          
+        </div>
+          
     </main>
+
+
+
+
+
+
+
+
 
     <!--Typed.JS File (for typing effect)-->
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
